apps/99-test/stalwart/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stalwart
  labels:
    app: stalwart
spec:
  selector:
    app: stalwart
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: smtp
      port: 25
      targetPort: smtp
    - name: submission
      port: 587
      targetPort: submission
    - name: submissions
      port: 465
      targetPort: submissions
    - name: imap
      port: 143
      targetPort: imap
    - name: imaps
      port: 993
      targetPort: imaps
